diploma_project/app/.helm/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: my-app
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
    - port: 8080
      targetPort: 8080
