diploma_project/app/.helm/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: my-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: java-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 8080
